k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  namespace: dotnetapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnetapp
  template:
    metadata:
      labels:
        app: dotnetapp
    spec:
      containers:
      - name: dotnet
        image: githubrunner2701.azurecr.io/dotnetapp:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets"
          readOnly: true

      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-kv
