k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
  namespace: dotnetapp
spec:
  selector:
    app: dotnetapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
